hphp/hack/test/reserved/interface.php.hh.exp
File "interface.php--Arraykey.php", line 2, characters 11-18:
`Arraykey` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Bool.php", line 2, characters 11-14:
`Bool` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Callable.php", line 2, characters 11-18:
Cannot use `Callable` as class name as it is reserved (Parsing[1002])
File "interface.php--Callable.php", line 2, characters 11-18:
`Callable` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Classname.php", line 2, characters 11-19:
Cannot use `Classname` as class name as it is reserved (Parsing[1002])
File "interface.php--Darray.php", line 2, characters 11-16:
Cannot use `Darray` as class name as it is reserved (Parsing[1002])
File "interface.php--Dynamic.php", line 2, characters 11-17:
`Dynamic` cannot be used as it is reserved. (Naming[2068])
File "interface.php--False.php", line 2, characters 11-15:
Cannot use `False` as class name as it is reserved (Parsing[1002])
File "interface.php--Float.php", line 2, characters 11-15:
`Float` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Int.php", line 2, characters 11-13:
`Int` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Mixed.php", line 2, characters 11-15:
`Mixed` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NArraykey.php", line 3, characters 11-18:
`Arraykey` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NBool.php", line 3, characters 11-14:
`Bool` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NCallable.php", line 3, characters 11-18:
Cannot use `Callable` as class name as it is reserved (Parsing[1002])
File "interface.php--NCallable.php", line 3, characters 11-18:
`Callable` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NClassname.php", line 3, characters 11-19:
Cannot use `Classname` as class name as it is reserved (Parsing[1002])
File "interface.php--NDarray.php", line 3, characters 11-16:
Cannot use `Darray` as class name as it is reserved (Parsing[1002])
File "interface.php--NDynamic.php", line 3, characters 11-17:
`Dynamic` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NFalse.php", line 3, characters 11-15:
Cannot use `False` as class name as it is reserved (Parsing[1002])
File "interface.php--NFloat.php", line 3, characters 11-15:
`Float` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NInt.php", line 3, characters 11-13:
`Int` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NMixed.php", line 3, characters 11-15:
`Mixed` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NNonnull.php", line 3, characters 11-17:
`Nonnull` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NNoreturn.php", line 3, characters 11-18:
`Noreturn` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NNothing.php", line 3, characters 11-17:
`Nothing` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NNull.php", line 3, characters 11-14:
Cannot use `Null` as class name as it is reserved (Parsing[1002])
File "interface.php--NNull.php", line 3, characters 11-14:
`Null` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NNum.php", line 3, characters 11-13:
`Num` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NParent.php", line 3, characters 11-16:
Cannot use `Parent` as class name as it is reserved (Parsing[1002])
File "interface.php--NParent.php", line 3, characters 11-16:
`Parent` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NResource.php", line 3, characters 11-18:
`Resource` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NSelf.php", line 3, characters 11-14:
Cannot use `Self` as class name as it is reserved (Parsing[1002])
File "interface.php--NSelf.php", line 3, characters 11-14:
`Self` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NString.php", line 3, characters 11-16:
`String` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NThis.php", line 3, characters 11-14:
Cannot use `This` as class name as it is reserved (Parsing[1002])
File "interface.php--NThis.php", line 3, characters 11-14:
`This` cannot be used as it is reserved. (Naming[2068])
File "interface.php--NTrue.php", line 3, characters 11-14:
Cannot use `True` as class name as it is reserved (Parsing[1002])
File "interface.php--NVarray.php", line 3, characters 11-16:
Cannot use `Varray` as class name as it is reserved (Parsing[1002])
File "interface.php--NVoid.php", line 3, characters 11-14:
`Void` cannot be used as it is reserved. (Naming[2068])
File "interface.php--N_.php", line 3, characters 11-11:
`_` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Nonnull.php", line 2, characters 11-17:
`Nonnull` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Noreturn.php", line 2, characters 11-18:
`Noreturn` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Nothing.php", line 2, characters 11-17:
`Nothing` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Null.php", line 2, characters 11-14:
Cannot use `Null` as class name as it is reserved (Parsing[1002])
File "interface.php--Null.php", line 2, characters 11-14:
`Null` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Num.php", line 2, characters 11-13:
`Num` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Parent.php", line 2, characters 11-16:
Cannot use `Parent` as class name as it is reserved (Parsing[1002])
File "interface.php--Parent.php", line 2, characters 11-16:
`Parent` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Resource.php", line 2, characters 11-18:
`Resource` cannot be used as it is reserved. (Naming[2068])
File "interface.php--Self.php", line 2, characters 11-14:
Cannot use `Self` as class name as it is reserved (Parsing[1002])
File "interface.php--Self.php", line 2, characters 11-14:
`Self` cannot be used as it is reserved. (Naming[2068])
File "interface.php--String.php", line 2, characters 11-16:
`String` cannot be used as it is reserved. (Naming[2068])
File "interface.php--This.php", line 2, characters 11-14:
Cannot use `This` as class name as it is reserved (Parsing[1002])
File "interface.php--This.php", line 2, characters 11-14:
`This` cannot be used as it is reserved. (Naming[2068])
File "interface.php--True.php", line 2, characters 11-14:
Cannot use `True` as class name as it is reserved (Parsing[1002])
File "interface.php--Varray.php", line 2, characters 11-16:
Cannot use `Varray` as class name as it is reserved (Parsing[1002])
File "interface.php--Void.php", line 2, characters 11-14:
`Void` cannot be used as it is reserved. (Naming[2068])
File "interface.php--_.php", line 2, characters 11-11:
`_` cannot be used as it is reserved. (Naming[2068])
