hphp/hack/test/reserved/interface.php
//// Foo.php
<?hh
interface Foo {}

//// Arraykey.php
<?hh
interface Arraykey {}

//// Bool.php
<?hh
interface Bool {}

//// Callable.php
<?hh
interface Callable {}

//// Classname.php
<?hh
interface Classname {}

//// Darray.php
<?hh
interface Darray {}

//// Dynamic.php
<?hh
interface Dynamic {}

//// False.php
<?hh
interface False {}

//// Float.php
<?hh
interface Float {}

//// Int.php
<?hh
interface Int {}

//// Mixed.php
<?hh
interface Mixed {}

//// Nonnull.php
<?hh
interface Nonnull {}

//// Noreturn.php
<?hh
interface Noreturn {}

//// Nothing.php
<?hh
interface Nothing {}

//// Null.php
<?hh
interface Null {}

//// Num.php
<?hh
interface Num {}

//// Parent.php
<?hh
interface Parent {}

//// Resource.php
<?hh
interface Resource {}

//// Self.php
<?hh
interface Self {}

//// String.php
<?hh
interface String {}

//// This.php
<?hh
interface This {}

//// True.php
<?hh
interface True {}

//// Varray.php
<?hh
interface Varray {}

//// Void.php
<?hh
interface Void {}

//// _.php
<?hh
interface _ {}

//// NFoo.php
<?hh
namespace N;
interface Foo {}

//// NArraykey.php
<?hh
namespace N;
interface Arraykey {}

//// NBool.php
<?hh
namespace N;
interface Bool {}

//// NCallable.php
<?hh
namespace N;
interface Callable {}

//// NClassname.php
<?hh
namespace N;
interface Classname {}

//// NDarray.php
<?hh
namespace N;
interface Darray {}

//// NDynamic.php
<?hh
namespace N;
interface Dynamic {}

//// NFalse.php
<?hh
namespace N;
interface False {}

//// NFloat.php
<?hh
namespace N;
interface Float {}

//// NInt.php
<?hh
namespace N;
interface Int {}

//// NMixed.php
<?hh
namespace N;
interface Mixed {}

//// NNonnull.php
<?hh
namespace N;
interface Nonnull {}

//// NNoreturn.php
<?hh
namespace N;
interface Noreturn {}

//// NNothing.php
<?hh
namespace N;
interface Nothing {}

//// NNull.php
<?hh
namespace N;
interface Null {}

//// NNum.php
<?hh
namespace N;
interface Num {}

//// NParent.php
<?hh
namespace N;
interface Parent {}

//// NResource.php
<?hh
namespace N;
interface Resource {}

//// NSelf.php
<?hh
namespace N;
interface Self {}

//// NString.php
<?hh
namespace N;
interface String {}

//// NThis.php
<?hh
namespace N;
interface This {}

//// NTrue.php
<?hh
namespace N;
interface True {}

//// NVarray.php
<?hh
namespace N;
interface Varray {}

//// NVoid.php
<?hh
namespace N;
interface Void {}

//// N_.php
<?hh
namespace N;
interface _ {}
